--- a/src/app/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.component.html
@@ -27,10 +27,9 @@
 
       <ol>
         <li><strong>1.2.1.</strong> The Agency reserves the right to sub-contract the fulfillment of an order or any part thereof.</li>
-        <li><strong>1.2.2.</strong> Any images supplied electronically will be incorporated into designs without charge provided that they are of suitable quality. All images need to be supplied as EPS illustrator vectors for logos and Photoshop tiffs (300dpi min) for pictures. Any logos that need to be re-drawn will be charged extra at our hourly rate. All supplied images requiring scanning or alterations to be charged at £35 per hour. Images sourced from external image libraries may incur additional license/royalty charges payable by the Client.</li>
-        <li><strong>1.2.3.</strong> Should the Client supply text, artwork or images, the Agency is not obliged to edit, check or guarantee the correctness thereof in any way whatsoever, and the end product shall be made at the entire risk of the Client.</li>
-        <li><strong>1.2.4.</strong> The Agency shall be indemnified by the Client in respect of any claims, costs and expenses arising out of any libelous matter or any infringement of copyright, patent design or any other proprietary or personal rights contained in any material supplied by the Client. The indemnity shall extend to any amounts paid on a lawyer's advice in settlement of any claim.</li>
-        <li><strong>1.2.5.</strong> Origination and/or conceptual work and any copyright subsisting therein shall remain the property of the Agency unless otherwise agreed in writing with the Client.</li>
+        <li><strong>1.2.2.</strong> Should the Client supply text, artwork or images, the Agency is not obliged to edit, check or guarantee the correctness thereof in any way whatsoever, and the end product shall be made at the entire risk of the Client.</li>
+        <li><strong>1.2.3.</strong> The Agency shall be indemnified by the Client in respect of any claims, costs and expenses arising out of any libelous matter or any infringement of copyright, patent design or any other proprietary or personal rights contained in any material supplied by the Client. The indemnity shall extend to any amounts paid on a lawyer's advice in settlement of any claim.</li>
+        <li><strong>1.2.4.</strong> Origination and/or conceptual work and any copyright subsisting therein shall remain the property of the Agency unless otherwise agreed in writing with the Client.</li>
       </ol>
     </section>
 
@@ -57,8 +56,7 @@
 
       <ol>
         <li><strong>1.4.1.</strong> Proofs, pull samples, specimens, sketches, photographs, links or any representation, whether partial or total, of the finished article in whatever form may be submitted to the Client for approval.</li>
-        <li><strong>1.4.2.</strong> Colour proofing is chargeable at £5 per A3 sheet and £2 per A4 sheet. Mono proofing is chargeable at £2 per A3 sheet and £1 per A4 sheet.</li>
-        <li><strong>1.4.3.</strong> After approval the Client shall have no claim against the Agency for errors in the exemplar as approved by them.</li>
+        <li><strong>1.4.2.</strong> After approval the Client shall have no claim against the Agency for errors in the exemplar as approved by them.</li>
       </ol>
     </section>
 
@@ -131,6 +129,8 @@
         <li><strong>1.10.9.</strong> If any of the provisions of this Agreement are judged to be illegal or unenforceable, the remainder shall continue in full force and the effect of the remainder of them will be not be deemed to be prejudiced.</li>
         <li><strong>1.10.10.</strong> This Agreement takes effect on the date on which you order our services. Acceptance of these terms is an absolute condition of the Client requesting work. An order constitutes acceptance of all our Terms and Conditions.</li>
         <li><strong>1.10.11.</strong> You shall not assign this Agreement or any benefits or interests arising under this Agreement without the Agency’s prior written permission.</li>
+        <li><strong>1.10.12.</strong> You reserve the right to use the rules instructed by our branding guidelines in any way you chose to develop and enhance your identity but these rules must remain unchanged for at least 3 months to allow reasonable amount of time for marketing material by The Agency to run a course.</li>
+        <li><strong>1.10.13.</strong> The Agency reserve the right to market the work produced both privately and publically in all formats (digital, print). This also includes social media marketing campaigns.</li>
       </ol>
     </section>
 
@@ -144,60 +144,6 @@
         <li><strong>1.11.4.</strong> All hours worked as part of an SLA are recorded and can be forwarded to the Client on request.</li>
         <li><strong>1.11.5.</strong> Once a Client approaches the final two hours of their SLA allowance, the Agency will endeavour to notify them automatically via email, providing the opportunity to purchase another SLA.</li>
         <li><strong>1.11.6.</strong> Any hours that have not been used within the initial 12 months after purchase will roll over to the following year, up to a maximum of 24 months. However, although the Agency reserves the right to increase the hourly rate as business needs dictate, the hours in an SLA will be honoured at the original rate at which they were purchased for one year, after which time, any roll-over hours will be applied to subsequent years at the new hourly rate.</li>
-      </ol>
-    </section>
-  </section>
-
-  <section>
-    <h2>Print Terms & Conditions</h2>
-
-    <section>
-      <h3><strong>2.1</strong> Proofing</h3>
-
-      <ol>
-        <li><strong>2.1.1.</strong> After initial design and layout, a mono proof will be submitted for author’s corrections to be identified. These corrections will be carried out inclusive of the quoted price. On approval of a second mono proof, again inclusive of the quoted price, the design will be classed as complete, where a final colour proof will be provided for full Client sign off. Any additional author’s corrections requested after the second mono proof is submitted will be charged at our normal rate of £100 per hour and £5 for each colour A3 proofing page printed.</li>
-      </ol>
-    </section>
-
-    <section>
-      <h3><strong>2.2</strong> Print</h3>
-
-      <ol>
-        <li><strong>2.2.1.</strong> Standing matter and printers’ materials of any kind are effaced or disposed of immediately after the order is executed unless written arrangements are made for retention in advance.</li>
-        <li><strong>2.2.2.</strong> The Agency shall not be required to work to tolerances closer than those applicable to the materials obtained by him in the ordinary course of trade. No liability shall arise from variation in the standard, quality and performance of such materials.</li>
-        <li><strong>2.2.3.</strong> Every endeavour will be made to deliver the correct quantity ordered, but estimates are conditional upon margins of 5% for work in one colour and 10% for other work being allowed for overs or shortage (4% and 8% respectively for quantities exceeding 50,000) the same to be charged or deducted.</li>
-      </ol>
-    </section>
-
-    <section>
-      <h3><strong>2.3</strong> Materials supplied by the Client</h3>
-
-      <ol>
-        <li><strong>2.3.1.</strong> The Agency will not be responsible for imperfect work caused by defects in or unsuitability of material and equipment supplied by the Client. The Agency will not be responsible for Client’s material wasted in course of production. Extra costs incurred through the use of defective materials or equipment supplied are for the Client’s account.</li>
-        <li><strong>2.3.2.</strong> The Agency may reject any paper, plates or other materials supplied or specified by the Client which appear to them to be unsuitable. Additional cost incurred if materials are found to be unsuitable during production may be charged except that if the whole or any part of such additional cost could have been avoided but for unreasonable delay by the Agency in ascertaining the unsuitability of the materials then that amount shall not be charged to the Client.</li>
-        <li><strong>2.3.3.</strong> Quantities of materials supplied by the Client shall be adequate to cover normal spoilage.</li>
-      </ol>
-    </section>
-
-    <section>
-      <h3><strong>2.4</strong> Machine Readable Codes</h3>
-
-      <ol>
-        <li><strong>2.4.1.</strong> In the case of machine readable codes or symbols, the Agency shall print the same as specified or approved by the Client in accordance with generally accepted standards and procedures.</li>
-        <li><strong>2.4.2.</strong> The Client shall be responsible for satisfying themselves that the code or symbol will read correctly on the equipment likely to be used by those for whom the code or symbol is intended.</li>
-        <li><strong>2.4.3.</strong> The Client shall indemnify the Agency against any claims by any party resulting from the code or symbol not reading or not reading correctly for any reason, except to the extent that such claim arises from any failure of the Agency to comply with any of the above which is not attributable to error falling within the tolerances generally accepted in the trade in relation to printing of this sort.</li>
-      </ol>
-    </section>
-
-    <section>
-      <h3><strong>2.5</strong> Delivery</h3>
-
-      <ol>
-        <li><strong>2.5.1.</strong> Goods will be dispatched or must be collected by the Client when ready and the Client shall not refuse or delay delivery.</li>
-        <li><strong>2.5.2.</strong> Advice of damage, delay or partial loss of goods in transit or of non-delivery must be given in writing to the Agency and the carrier within three clear days of delivery (or, in the case of non-delivery, within 28 days of despatch of the goods) and any claim in respect thereof must be made in writing to the Agency and the carrier within seven days of delivery (or, in the case of non-delivery, within 42 days of despatch). All other complaints and claims must be made in writing to the Agency within 28 days of delivery. The Agency shall not be liable in respect of any claim unless the aforementioned requirements have been complied with except in any particular case where the Client proves that it was not possible to comply with the requirements and advice (where required) was given and the claim made as soon as reasonably possible.</li>
-        <li><strong>2.5.3.</strong> Goods completed but not delivered shall thereupon forthwith become due and payable. Moreover after the expiration of 14 days notice the Agency may exercise a general lien on all the Client’s goods and property in our hands and may dispose of such goods and property as they see fit and apply the proceeds towards such debts. The Agency may also elect to cancel further work and/or not produce any unmade balance of such contract and recover from the Client any losses sustained by so doing.</li>
-        <li><strong>2.5.4.</strong> The Agency shall not be liable for any loss to the Client arising from delay in transit howsoever caused.</li>
-        <li><strong>2.5.5.</strong> The risk in the goods passes to the Client upon delivery (whether to the Client or to a common carrier) but legal and beneficial ownership shall remain with the Agency until payment in full has been received (each delivery being considered as a whole). Until the date of payment the Client, if so required by the Agency, shall store the goods in such a way that they are clearly identifiable as the property of the Agency.</li>
       </ol>
     </section>
   </section>
@@ -246,7 +192,11 @@
       <h3>Summary</h3>
 
       <p>
-        The Agency offers website hosting and database hosting services through the use of third party providers and is subject to requirements set out in these terms and conditions and any other relevant terms and conditions, policies and notices which may be applicable to the supply of hosting services.
+        The Agency offers setup of website hosting and database hosting services through the use of third party providers and is subject to requirements set out in these terms and conditions and any other relevant terms and conditions, policies and notices which may be applicable to the supply of hosting services.
+      </p>
+
+      <p>
+        It is not the responsibility of The Agency to maintain payment and hosting of the web services beyond the period of engagement.
       </p>
 
       <p>
@@ -256,7 +206,6 @@
       <ul>
         <li>Whilst we and our suppliers will always endeavour to give you the best possible level of service, we cannot guarantee 100% availability of service.</li>
         <li>The Agency and our suppliers accept no responsibility for any losses caused through a loss of service.</li>
-        <li>Your service will be removed if you fail to pay in time or misuse the service.</li>
         <li>The Agency will not be liable for any costs to restore your service once it has been removed. Specifically, any websites with databases will require reprogramming once they have been removed from their original server.</li>
         <li>Any work undertaken by the Agency at the request of the Client will be charged at our standard rate of £100 per hour, including investigations regarding problems or loss of service that are not due to the Agency or our suppliers. The Agency should only be contacted after you and your IT professional/advisor have established that any problems are not due to you or your systems.</li>
       </ul>
