add footer links and update case study

--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -215,9 +215,20 @@
       </p>
 
       <p>
-        Check out the website at <a href="http://epoch-group.org">epoch-group.org</a>
+        Take a look at the website <a href="https://epoch-group.org">epoch-group.org</a>
+        and our <a href="https://www.behance.net/gallery/71457389/EPOCH">Behance presentation</a> on the project.
       </p>
     </section>
+  </section>
+
+  <section>
+    <header>
+      <h2>Get in touch!</h2>
+    </header>
+    <p>
+      Interested in letting us help you design your brand? <a [routerLink]="['/contact']">Contact us</a> or check out
+      <a [routerLink]="['/work']">our work</a>.
+    </p>
   </section>
 </section>
 
