--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,6 +14,38 @@
           </li>
         </ul>
       </section>
+      <ul class="footer__social list-unstyled list-inline">
+        <li>
+          <a href="https://www.linkedin.com/company/jupiter-and-the-giraffe/" class="link-plain footer__social-link" title="Jupiter and the Giraffe Linkedin profile">
+            <i class="icon-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://instagram.com/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Instagram profile">
+            <i class="icon-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/jupiter_giraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Twitter profile">
+            <i class="icon-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://facebook.com/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Facebook profile">
+            <i class="icon-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://pinterest.co.uk/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Pinterest profile">
+            <i class="icon-pinterest"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.behance.net/JupiterandtheGiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Behance profile">
+            <i class="icon-behance"></i>
+          </a>
+        </li>
+      </ul>
       <ul class="footer__menu list-unstyled list-inline">
         <li
           *ngFor="let item of general"
