--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -23,6 +23,14 @@
     margin-top: $margin-xlarge;
   }
 
+  &__social {
+    margin-top: $margin-xlarge;
+  }
+
+  &__social-link {
+    margin-right: $margin-large;
+  }
+
   &__list-item {
     padding: 5px 0;
     border-bottom: 1px solid lighten($color-gray-dark, 15%);
