--- a/src/assets/sass/_typography.scss
+++ b/src/assets/sass/_typography.scss
@@ -6,6 +6,18 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?54qe1w');
+  src:  url('../fonts/icomoon.eot?54qe1w#iefix') format('embedded-opentype'),
+  url('../fonts/icomoon.ttf?54qe1w') format('truetype'),
+  url('../fonts/icomoon.woff?54qe1w') format('woff'),
+  url('../fonts/icomoon.svg?54qe1w#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 .text {
   &-center {
     text-align: center;
