break into new component

--- a/src/app/boombocs/boombocs.component.html
+++ b/src/app/boombocs/boombocs.component.html
@@ -101,6 +101,11 @@
       This is such an important quality to a team. It also meant that decisions were quickly made and implemented and we wasted little time.
     </p>
 
+    <blockquote>
+      <q>The folks at Jupiter and the Giraffe did a stupendous job on our website</q>
+      <footer>Jonny Williams - Director</footer>
+    </blockquote>
+
     <p>
       Check it out at <a href="http://boombocs.com" rel="noreferrer noopener">BoomBocs.com</a>
     </p>
@@ -109,6 +114,8 @@
       <img src="assets/images/boombocs.png" alt="Boombocs logo" data-aos="fade-up">
     </div>
   </section>
+
+  <app-get-in-touch></app-get-in-touch>
 </section>
 
 
