--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -221,15 +221,7 @@
     </section>
   </section>
 
-  <section>
-    <header>
-      <h2>Get in touch!</h2>
-    </header>
-    <p>
-      Interested in letting us help you design your brand? <a [routerLink]="['/contact']">Contact us</a> or check out
-      <a [routerLink]="['/work']">our work</a>.
-    </p>
-  </section>
+  <app-get-in-touch></app-get-in-touch>
 </section>
 
 
