--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -101,4 +101,6 @@
       Check it out at <a href="https://northstarlaw.co.uk">northstarlaw.co.uk</a>
     </p>
   </section>
+
+  <app-get-in-touch></app-get-in-touch>
 </section>
