--- a/src/app/veratrak/veratrak.component.html
+++ b/src/app/veratrak/veratrak.component.html
@@ -110,6 +110,8 @@
       Check out the website and logo at <a href="http://veratrak.com">veratrak.com</a>
     </p>
   </section>
+
+  <app-get-in-touch></app-get-in-touch>
 </section>
 
 
