Feature/add seo links (#37)
* add footer links and update case study

* break into new component

* fix tests

--- a/src/app/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/epoch-brand-website/epoch-brand-website.component.html
@@ -215,10 +215,13 @@
       </p>
 
       <p>
-        Check out the website at <a href="http://epoch-group.org">epoch-group.org</a>
+        Take a look at the website <a href="https://epoch-group.org">epoch-group.org</a>
+        and our <a href="https://www.behance.net/gallery/71457389/EPOCH">Behance presentation</a> on the project.
       </p>
     </section>
   </section>
+
+  <app-get-in-touch></app-get-in-touch>
 </section>
 
 
