--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-snow-component></app-snow-component>
 <div [ngClass]="{'keyboard-user': isKeyboardUser}">
   <app-header-component [show]="showHeader"></app-header-component>
 
